Task #CR-1047: small adjustment to timing alerts margin and fixed a couple of conditions displaying suffix/prefix when it is empty resulting in bigger then intended gaps in design

--- a/themes/survey/ls6_surveytheme/css/variations/theme_red.css
+++ b/themes/survey/ls6_surveytheme/css/variations/theme_red.css
@@ -15169,6 +15169,9 @@ a [class^=ri-], a [class*=" ri-"] {
   font-weight: 600;
   color: #6E748C;
 }
+.question-container .timer_header {
+  margin-top: 1rem;
+}
 
 @media only screen and (max-device-width: 767px) {
   .ls-questionhelp {
